--- a/templates/login.html
+++ b/templates/login.html
@@ -14,7 +14,7 @@
             <h5>Successful login</h5>
         {% endif %}
         <!-- <h5>{{user}}</h5> -->
-        <form method="POST" action="{{ url_for('user_login') }}" class="col s6 offset-s3">
+        <form method="POST" action="{{ url_for('user_login') }}" class="col s12 offset-m3 m6 login-form">
             <p>Please select your account type:</p>
             <div class="login-radio">
                 <label>
