--- a/templates/register.html
+++ b/templates/register.html
@@ -8,8 +8,8 @@
     <div class="row container">
         <h2 class="heading-text">Register</h2>
         <p>Choose one of the categories below to choose a type for your account</p>
-        <div class="row card-row-register">
-            <div class="col s3">
+        <div class="row">
+            <div class="col s12 m3">
                 <div class="card">
                     <p class="card-title">Dogs</p>
                     <div class="card-image">
@@ -21,7 +21,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col s3">
+            <div class="col s12 m3">
                 <div class="card">
                     <p class="card-title">User</p>
                     <div class="card-image">
@@ -33,7 +33,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col s3">
+            <div class="col s12 m3">
                 <div class="card">
                     <p class="card-title">Services</p>
                     <div class="card-image">
@@ -45,7 +45,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col s3">
+            <div class="col s12 m3">
                 <div class="card">
                     <p class="card-title">Stores</p>
                     <div class="card-image">
