--- a/templates/stores.html
+++ b/templates/stores.html
@@ -15,16 +15,18 @@
                             <i class="material-icons card-icon">shopping_cart</i>
                         </div>
                     </div>
+                    {% if session['is_staff'] %}
                     <div class="col s12 m2 buttons-row">
-                        <a type="submit" id="{{store._id}}" name="edit" value="store" class="waves-effect waves-light btn card-action-button">
+                        <a type="submit" id="{{store._id}}" name="edit-store" value="store" class="waves-effect waves-light btn card-action-button edit-button">
                             <i class="material-icons right card-action-button-icon">edit</i>
                             <span>Edit</span>
                         </a>
-                        <a href="#" class="waves-effect waves-light btn card-action-button">
+                        <a type="submit" id="{{store._id}}" name="delete_store" class="waves-effect waves-light btn card-action-button delete-button">
                             <i class="material-icons right card-action-button-icon">delete</i>
                             <span>Delete</span>
                         </a>
                     </div>
+                    {% endif %}
                     <div class="col s12 m7">
                         <div class="card-content">
                             <p class="card-content-title">Description</p>
@@ -71,7 +73,16 @@
                         </div>
                     </form>
                 </div>
-
+                <div class="delete-form-box hide" id="{{store._id}}">
+                    <form action="{{ url_for('delete_entry', usr_type='stores', usr_id=store._id) }}" method="POST" class="col s12 delete-form">
+                        <div class="row">
+                           <h3>Are you sure ou want to delete?</h3>
+                            <button class="btn waves-effect waves-light" type="submit">Yes, Delete
+                                <i class="material-icons right">delete</i>
+                            </button>
+                        </div>
+                    </form>
+                </div>
                 {% endif %}
             {% endfor %}
         </div>
