--- a/templates/dogs.html
+++ b/templates/dogs.html
@@ -22,7 +22,7 @@
                             <span>Adopt</span>
                         </a>
                         {% if session['is_staff'] %}
-                        <a type="submit" id="{{dog._id}}" name="edit" value="dogs" class="waves-effect waves-light btn card-action-button edit_button">
+                        <a type="submit" id="{{dog._id}}" name="edit" value="dogs" class="waves-effect waves-light btn card-action-button edit-button">
                             <i class="material-icons right card-action-button-icon">edit</i>
                             <span>Edit</span>
                         </a>
@@ -66,10 +66,10 @@
                     </form>
                 </div>
                 <div class="delete-form-box hide" id="{{dog._id}}">
-                    <form action="{{ url_for('delete_dog', usr_id=dog._id) }}" method="POST" class="col s12 delete-form">
+                    <form action="{{ url_for('delete_entry', usr_type='dogs', usr_id=dog._id) }}" method="POST" class="col s12 delete-form">
                         <div class="row">
                            <h3>Are you sure ou want to delete?</h3>
-                            <button action="" class="btn waves-effect waves-light" type="submit">Yes, Delete
+                            <button class="btn waves-effect waves-light" type="submit">Yes, Delete
                                 <i class="material-icons right">delete</i>
                             </button>
                         </div>
