--- a/templates/users.html
+++ b/templates/users.html
@@ -86,10 +86,10 @@
                     </form>
                 </div>
                 <div class="delete-form-box hide" id="{{user._id}}">
-                    <form action="{{ url_for('delete_user', usr_id=user._id) }}" method="POST" class="col s12 delete-form">
+                    <form action="{{ url_for('delete_entry', usr_type='users', usr_id=user._id) }}" method="POST" class="col s12 delete-form">
                         <div class="row">
                            <h3>Are you sure ou want to delete?</h3>
-                            <button action="" class="btn waves-effect waves-light" type="submit">Yes, Delete
+                            <button class="btn waves-effect waves-light" type="submit">Yes, Delete
                                 <i class="material-icons right">delete</i>
                             </button>
                         </div>
