--- a/templates/services.html
+++ b/templates/services.html
@@ -37,15 +37,15 @@
                 </div>
                 {% if session['is_staff'] %}
                 <div class="edit-form-box hide" id="{{ service._id }}">
-                    <form action="{{ url_for('update_service', usr_id=service._id) }}" method="POST" class="col s12">
+                    <form action="{{ url_for('update_entry', usr_type='services', usr_id=service._id) }}" method="POST" class="col s12">
                         <div class="row">
                             <div class="input-field col s6">
-                                <input id="service_first_name" name="service_first_name" type="text" class="validate" required>
-                                <label for="service_first_name">{{service.service_first_name}}</label>
+                                <input id="first_name" name="first_name" type="text" class="validate">
+                                <label for="first_name">{{service.first_name}}</label>
                             </div>
                             <div class="input-field col s6">
-                                <input id="service_last_name" name="service_last_name" type="text" class="validate">
-                                <label for="service_last_name">{{service.service_last_name}}</label>
+                                <input id="last_name" name="last_name" type="text" class="validate">
+                                <label for="last_name">{{service.last_name}}</label>
                             </div>
                         </div>
                         <div class="row">
@@ -56,7 +56,7 @@
                         </div>
                         <div class="row">
                             <div class="input-field col s6">
-                                <input id="type_of_service" name="type_of_service" type="text" class="validate" required>
+                                <input id="type_of_service" name="type_of_service" type="text" class="validate">
                                 <label for="first_name">{{service.type_of_service}}</label>
                             </div>
                         </div>
