--- a/templates/users.html
+++ b/templates/users.html
@@ -42,7 +42,7 @@
                     <form action="{{ url_for('update_user', usr_id=user._id) }}" method="POST" class="col s12">
                         <div class="row">
                             <div class="input-field col s6">
-                                <input id="first_name" name="first_name" type="text" class="validate" required>
+                                <input id="first_name" name="first_name" type="text" class="validate">
                                 <label for="first_name">{{user.first_name}}</label>
                             </div>
                             <div class="input-field col s6">
