--- a/templates/users.html
+++ b/templates/users.html
@@ -17,11 +17,11 @@
                     </div>
                     {% if ( session['is_staff'] or user._id == session['_id'] ) %}
                     <div class="col s12 m2 buttons-row">
-                        <a type="submit" id="{{user._id}}" name="edit" value="user" class="waves-effect waves-light btn card-action-button edit_button">
+                        <a type="submit" id="{{user._id}}" name="edit-user" value="user" class="waves-effect waves-light btn card-action-button edit-button">
                             <i class="material-icons right card-action-button-icon">edit</i>
                             <span>Edit</span>
                         </a>
-                        <a type="submit" id="{{user._id}}" name="delete_user" class="waves-effect waves-light btn card-action-button delete-button">
+                        <a type="submit" id="{{user._id}}" name="delete-user" class="waves-effect waves-light btn card-action-button delete-button">
                             <i class="material-icons right card-action-button-icon">delete</i>
                             <span>Delete</span>
                         </a>
@@ -39,7 +39,7 @@
                 </div>
                 {% if session['is_staff'] %}
                 <div class="edit-form-box hide" id="{{ user._id }}">
-                    <form action="{{ url_for('update_user', usr_id=user._id) }}" method="POST" class="col s12">
+                    <form action="{{ url_for('update_entry', usr_type='users', usr_id=user._id) }}" method="POST" class="col s12">
                         <div class="row">
                             <div class="input-field col s6">
                                 <input id="first_name" name="first_name" type="text" class="validate">
