--- a/templates/services.html
+++ b/templates/services.html
@@ -17,11 +17,11 @@
                     </div>
                     {% if session['is_staff'] %}
                     <div class="col s12 m2 buttons-row">
-                        <a type="submit" id="{{service._id}}" name="edit-service" value="service" class="waves-effect waves-light btn card-action-button edit-button">
+                        <a id="{{service._id}}" name="edit-service" value="service" class="waves-effect waves-light btn card-action-button edit-button">
                             <i class="material-icons right card-action-button-icon">edit</i>
                             <span>Edit</span>
                         </a>
-                        <a type="submit" id="{{service._id}}" name="delete-service" class="waves-effect waves-light btn card-action-button delete-button">
+                        <a id="{{service._id}}" name="delete-service" class="waves-effect waves-light btn card-action-button delete-button">
                             <i class="material-icons right card-action-button-icon">delete</i>
                             <span>Delete</span>
                         </a>
@@ -40,35 +40,35 @@
                     <form action="{{ url_for('update_entry', usr_type='services', usr_id=service._id) }}" method="POST" class="col s12">
                         <div class="row">
                             <div class="input-field col s6">
-                                <input id="first_name" name="first_name" type="text" class="validate">
+                                <input name="first_name" type="text" class="validate">
                                 <label for="first_name">{{service.first_name}}</label>
                             </div>
                             <div class="input-field col s6">
-                                <input id="last_name" name="last_name" type="text" class="validate">
+                                <input name="last_name" type="text" class="validate">
                                 <label for="last_name">{{service.last_name}}</label>
                             </div>
                         </div>
                         <div class="row">
                             <div class="input-field col s12">
-                                <input id="password" name="password" type="password" class="validate">
+                                <input name="password" type="password" class="validate">
                                 <label for="password">{{service.password}}</label>
                             </div>
                         </div>
                         <div class="row">
                             <div class="input-field col s6">
-                                <input id="type_of_service" name="type_of_service" type="text" class="validate">
+                                <input name="type_of_service" type="text" class="validate">
                                 <label for="first_name">{{service.type_of_service}}</label>
                             </div>
                         </div>
                         <div class="row">
                             <div class="input-field col s12">
-                                <textarea id="service_description" name="service_description" class="materialize-textarea"></textarea>
+                                <textarea name="service_description" class="materialize-textarea"></textarea>
                                 <label for="service_description">{{service.service_description}}</label>
                             </div>
                         </div>
                         <div class="row">
                             <div class="input-field col s12">
-                                <input id="_email" name="_email" type="email" class="validate">
+                                <input name="_email" type="email" class="validate">
                                 <label for="_email">{{service._email}}</label>
                             </div>
                         </div>
