--- a/templates/users.html
+++ b/templates/users.html
@@ -17,11 +17,11 @@
                     </div>
                     {% if ( session['is_staff'] or user._id == session['_id'] ) %}
                     <div class="col s12 m2 buttons-row">
-                        <a type="submit" id="{{user._id}}" name="edit-user" value="user" class="waves-effect waves-light btn card-action-button edit-button">
+                        <a id="{{user._id}}" name="edit-user" value="user" class="waves-effect waves-light btn card-action-button edit-button">
                             <i class="material-icons right card-action-button-icon">edit</i>
                             <span>Edit</span>
                         </a>
-                        <a type="submit" id="{{user._id}}" name="delete-user" class="waves-effect waves-light btn card-action-button delete-button">
+                        <a id="{{user._id}}" name="delete-user" class="waves-effect waves-light btn card-action-button delete-button">
                             <i class="material-icons right card-action-button-icon">delete</i>
                             <span>Delete</span>
                         </a>
@@ -42,23 +42,23 @@
                     <form action="{{ url_for('update_entry', usr_type='users', usr_id=user._id) }}" method="POST" class="col s12">
                         <div class="row">
                             <div class="input-field col s6">
-                                <input id="first_name" name="first_name" type="text" class="validate">
+                                <input name="first_name" type="text" class="validate">
                                 <label for="first_name">{{user.first_name}}</label>
                             </div>
                             <div class="input-field col s6">
-                                <input id="last_name" name="last_name" type="text" class="validate">
+                                <input name="last_name" type="text" class="validate">
                                 <label for="last_name">{{user.last_name}}</label>
                             </div>
                         </div>
                         <div class="row">
                             <div class="input-field col s12">
-                                <input id="password" name="password" type="password" class="validate">
+                                <input name="password" type="password" class="validate">
                                 <label for="password">{{user.password}}</label>
                             </div>
                         </div>
                         <div class="row">
                             <div class="input-field col s12">
-                                <input id="_email" name="_email" type="email" class="validate">
+                                <input name="_email" type="email" class="validate">
                                 <label for="_email">{{user._email}}</label>
                             </div>
                         </div>
@@ -66,7 +66,7 @@
                             <div class="switch">
                                 <label>
                                 Client
-                                <input id="is_staff" name="is_staff" type="checkbox">
+                                <input name="is_staff" type="checkbox">
                                 <span class="lever"></span>
                                 Staff
                                 </label>
@@ -74,7 +74,7 @@
                         </div>
                         <div class="row">
                             <div class="input-field col s12">
-                                <textarea id="user_description" name="user_description" class="materialize-textarea"></textarea>
+                                <textarea name="user_description" class="materialize-textarea"></textarea>
                                 <label for="user_description">{{user.user_description}}</label>
                             </div>
                         </div>
