--- a/static/sass/base/_presets.scss
+++ b/static/sass/base/_presets.scss
@@ -14,8 +14,9 @@ a {
     padding: 1rem;
 }
 .parallax-container {
-    top: 5.5rem;
+    top: 3.5rem;
     width: 100%;
+    max-height: 70vh;
 }
 .parallax-container .parallax img {
     max-width: 300%;
