--- a/templates/base.html
+++ b/templates/base.html
@@ -21,17 +21,33 @@
                     <ul id="nav-mobile" class="hide-on-med-and-down">
                         <li><a href="{{url_for('user_home')}}">Home</a></li>
                         <li><a href="{{url_for('get_dogs')}}">Adoption</a></li>
+                        {% if session['is_staff'] %}
+                        <li><a href="{{url_for('get_users')}}">Users</a></li>
+                        {% endif %}
                         <li><a href="{{url_for('get_services')}}">Services</a></li>
                         <li><a href="{{url_for('get_stores')}}">Stores</a></li>                
                     </ul>
                     <ul class="side-nav" id="mobile-menu">
                         <li><a href="{{url_for('user_home')}}">Home</a></li>
                         <li><a href="{{url_for('get_dogs')}}">Adoption</a></li>
+                        {% if session['is_staff'] %}
+                        <li><a href="{{url_for('get_users')}}">Users</a></li>
+                        {% endif %}
                         <li><a href="{{url_for('get_services')}}">Services</a></li>
                         <li><a href="{{url_for('get_stores')}}">Stores</a></li> 
                         <div class="row register-box show-on-small-only">
+                            {% if not session %}
                             <a href="{{url_for('register')}}" class="col s12 btn waves-effect general-text nav-action-button">Register</a>
                             <a href="{{url_for('user_login')}}" class="col s12 btn waves-effect general-text nav-action-button">Login</a>
+                            {% endif %}
+                            {% if session['is_staff'] %}
+                            <a href="{{url_for('register')}}" class="col s12 btn waves-effect general-text nav-action-button">Register</a>
+                            <a href="{{url_for('user_login')}}" class="col s12 btn waves-effect general-text nav-action-button">Logout</a>
+                            {% endif %}
+                            {% if session['not_staff'] %}     
+                            <a href="{{url_for('user_login')}}" class="col s12 btn waves-effect general-text nav-action-button">Logout</a>
+                            {% endif %}
+
                         </div>
                     </ul>
                 </div>
