--- a/templates/stores.html
+++ b/templates/stores.html
@@ -17,11 +17,11 @@
                     </div>
                     {% if session['is_staff'] %}
                     <div class="col s12 m2 buttons-row">
-                        <a id="{{store._id}}" name="edit-store" value="store" class="waves-effect waves-light btn card-action-button edit-button">
+                        <a id="{{store._id}}" value="edit" class="waves-effect waves-light btn card-action-button form-trigger">
                             <i class="material-icons right card-action-button-icon">edit</i>
                             <span>Edit</span>
                         </a>
-                        <a id="{{store._id}}" name="delete_store" class="waves-effect waves-light btn card-action-button delete-button">
+                        <a id="{{store._id}}" value="delete" class="waves-effect waves-light btn card-action-button form-trigger">
                             <i class="material-icons right card-action-button-icon">delete</i>
                             <span>Delete</span>
                         </a>
@@ -36,34 +36,34 @@
                     </div>
                 </div>
                 {% if session['is_staff'] %}
-                <div class="edit-form-box hide" id="{{ store._id }}">
+                <div class="form-box hide" id="{{ store._id }}" value="edit">
                     <form action="{{ url_for('update_entry', usr_type='stores', usr_id=store._id) }}" method="POST" class="col s12">
                         <div class="row">
                             <div class="input-field col s12">
                                 <input name="store_name" type="text" class="validate">
-                                <label for="store_name">{{store.store_name}}</label>
+                                <label for="store_name">Store Name</label>
                             </div>
                             <div class="input-field col s6">
                                 <input name="store_address" type="text" class="validate">
-                                <label for="store_addres">{{store.store_address}}</label>
+                                <label for="store_addres">Store Address</label>
                             </div>
                         </div>
                         <div class="row">
                             <div class="input-field col s12">
                                 <input name="_email" type="email" class="validate">
-                        <label for="_email">{{store._email}}</label>
+                        <label for="_email">Email</label>
                             </div>
                         </div>
                         <div class="row">
                             <div class="input-field col s12">
                                 <input name="password" type="password" class="validate">
-                                <label for="password">{{store.password}}</label>
+                                <label for="password">Password</label>
                             </div>
                         </div>
                         <div class="row">
                             <div class="input-field col s12">
                                 <textarea name="store_description" class="materialize-textarea"></textarea>
-                                <label for="store_description">{{store.store_description}}</label>
+                                <label for="store_description">Store Description</label>
                             </div>
                         </div>
                         <div class="row">
@@ -73,7 +73,7 @@
                         </div>
                     </form>
                 </div>
-                <div class="delete-form-box hide" id="{{store._id}}">
+                <div class="form-box hide" id="{{store._id}}" value="delete">
                     <form action="{{ url_for('delete_entry', usr_type='stores', usr_id=store._id) }}" method="POST" class="col s12 delete-form">
                         <div class="row">
                            <h3>Are you sure ou want to delete?</h3>
